--- a/projetofashion.css
+++ b/projetofashion.css
@@ -20,9 +20,9 @@ li .mymenu {
   font-size: 1.6em;
   text-decoration: none;
   color: #4c4c4c;
-  -webkit-border-box: 0 1px 0 0 #4c4c4c;
+  border-box: 0 1px 0 0 #4c4c4c;
   border-bottom: 4px solid transparent;
-  -webkit-transition: border-bottom 0.3s linear;
+  transition: border-bottom 0.3s linear;
 }
 li .mymenu:hover {
   border-bottom: 4px solid #4c4c4c;
