--- a/projetofashion.css
+++ b/projetofashion.css
@@ -20,7 +20,7 @@ li .mymenu {
   font-size: 1.6em;
   text-decoration: none;
   color: #4c4c4c;
-  border-box: 0 1px 0 0 #4c4c4c;
+  -webkit-border-box: 0 1px 0 0 #4c4c4c;
   border-bottom: 4px solid transparent;
   transition: border-bottom 0.3s linear;
 }
@@ -37,4 +37,9 @@ body {
 #principal {
   width: 1024px;
   margin: auto;
+}
+
+.header-top{
+    height: 50px;
+    background-color: #162028;
 }
